# task_invocation_cron_kernel

./: .gitignore  AGENTS.md  Cargo.toml  README.md
docs/: spec.md
docs/superpowers/plans/: 2026-04-08-tick-spec-alignment.md
docs/superpowers/specs/: 2026-04-08-tick-v0.2-design.md
scripts/: install.sh
src/: lib.rs  main.rs  mesh.rs  output.rs  storage.rs
src/cli/: mod.rs
src/engine/: mod.rs
src/models/: mod.rs
tests/: cli_contract.rs  cli_query_commands.rs  engine_behavior.rs  storage_queries.rs
