[package]
name = "task_invocation_cron_kernel"
version = "0.1.0"
edition = "2021"
authors = ["0xBoji <0xbojissd@gmail.com>"]
description = "RAI Pillar 5: Task Invocation Cron Kernel - mesh-aware distributed cron scheduling"
readme = "README.md"
repository = "https://github.com/0xBoji/task_invocation_cron_kernel"

[[bin]]
name = "tick"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
coding_agent_mesh_presence = { path = "../coding_agent_mesh_presence" }
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-cron-scheduler = "0.15.1"
toml = "0.9.7"
uuid = { version = "1.4", features = ["serde", "v4"] }
